--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 <body>
     <h1>Guess the color!</h1>
-    <h2 id="colourValue"></h2>
+    <h2 id="colorValue"></h2>
     <div id="buttonWrapper">
-        <button class="colourButton"></button>
-        <button class="colourButton"></button>    
-        <button class="colourButton"></button>    
-        <button class="colourButton"></button>    
-        <button class="colourButton"></button>    
-        <button class="colourButton"></button>    
+        <button class="colorButton"></button>
+        <button class="colorButton"></button>    
+        <button class="colorButton"></button>    
+        <button class="colorButton"></button>    
+        <button class="colorButton"></button>    
+        <button class="colorButton"></button>    
     </div>
     <h2 id="answer"></h2>
 
