--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <link rel="stylesheet" href="style.css">
-
+    <title>CS321 Final</title>
 </head>
 
 <body>
