--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1>Guess the color!</h1>
+    <div id="colorBox"></div>
     <h2 id="colorValue"></h2>
     <div id="buttonWrapper">
         <button class="colorButton"></button>
