--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
     <h1>Guess the color!</h1>
+    <h4>Using RGB values</h4>
     <div id="colorBox"></div>
+    <br>
     <h2 id="colorValue"></h2>
     <div id="buttonWrapper">
         <button class="colorButton"></button>
@@ -20,6 +22,14 @@
     <h2 id="answer"></h2>
 
     <div id="reset"><button id="resetButton">Reset game</button></div>
+    <br><br>
+    <div id="colorBox"></div>
+    <br><br>
+
+    <h3>How do RGB values work?</h3>
+    <iframe id="RGBVideo" width="420" height="315"
+    src="https://www.youtube.com/embed/hhI4x6hx21s">
+    </iframe>
 
     <script src="script.js"></script>
 </body>
