--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <iframe id="RGBVideo" width="420" height="315"
     src="https://www.youtube.com/embed/hhI4x6hx21s">
     </iframe>
-
+    <br><br><br><br>
+    <footer>
+        <canvas id="myCanvas" width="450" height="50" style="border:1px solid #000000;">
+        </canvas>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
