--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h4>Using RGB values</h4>
     <div id="colorBox"></div>
     <br>
-    <h2 id="colorValue"></h2>
-    <div id="buttonWrapper">
+    <h2 id="rgbValue"></h2>
+    <div id="buttonWrap">
         <button class="colorButton"></button>
         <button class="colorButton"></button>    
         <button class="colorButton"></button>    
