--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>CS321 Final</title>
+    <title>CS321 Final Team 6</title>
 </head>
 
 <body>
