--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="jQuery.min.js"></script>  
+    <script src="jQuery.fontFlex.js"></script>
     <title>CS321 Final Team 6</title>
 </head>
 
